# FQ-HyperLogLog-Autocorrect

./: README.md
algo_description/: README.md  description.tex  references.bib  shun4colors.tex
fq_hll_cpp/: CMakeLists.txt  README.md  fq_hllConfig.cmake.in
fq_hll_cpp/scripts/: fq_hll_clang++  fq_hll_g++  uninstall_fq_hll
fq_hll_cpp/src/: CMakeLists.txt
fq_hll_cpp/src/include/FQ-HLL/: Autocorrector.h  FQ-HLL.h  Hasher.h  HyperLogLog.h  compare.h  compare3.h
fq_hll_cpp/src/src/: Autocorrector.cpp  Hasher.cpp  HyperLogLog.cpp  compare.cpp  compare3.cpp
fq_hll_cpp/src/test_files/: 20k_texting.txt  database.txt  texting.txt
fq_hll_cpp/tests/: fq_hll_test.cpp  sample_code.cpp
fq_hll_cpp/tests/outputs/: 20k_autocorrect_suggestions.txt  20k_top3_suggestions.txt  class3_suggestions.txt  database_autocorrect_suggestions.txt  database_top3_suggestions.txt  qwerty_20k_top3_suggestions.txt  qwerty_database_autocorrect_suggestions.txt  qwerty_database_top3_suggestions.txt
fq_hll_cpp/tests/test_files/: class_suggestions.txt  typo_file.txt
fq_hll_py/: Dyslexic_Library.md  Library.md  README.md  pyproject.toml
fq_hll_py/src/fq_hll/: Autocorrector.py  Hasher.py  HyperLogLog.py  __init__.py  compare.py  compare3.py
fq_hll_py/src/fq_hll/test_files/: 20k_shun4midx.txt  texting.txt
fq_hll_py/tests/: bk_test.py  fq_hll_test.py  symspell_test.py
fq_hll_py/tests/outputs/: 20k_autocorrect_suggestions.txt  20k_suggestions_bk_ed_2.txt  20k_suggestions_bk_ed_3.txt  20k_symspell.txt  20k_top3_suggestions.txt  autocorrect_suggestions.txt  class_suggestions.txt  database_autocorrect_suggestions.txt  database_suggestions_bk_ed_2.txt  database_suggestions_bk_ed_3.txt  database_symspell.txt  database_top3_suggestions.txt  qwerty_20k_autocorrect_suggestions.txt  qwerty_20k_top3_suggestions.txt  qwerty_database_autocorrect_suggestions.txt  qwerty_database_top3_suggestions.txt
fq_hll_py/tests/test_files/: output_compare.txt
