[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "fq_hll"
version = "1.0.7"
authors = [
  { name="Shun/翔海", email="shun4midx@example.com" },
]
description = "A Frequency-Quantized HyperLogLog Autocorrection algorithm that also is dyslexia-friendly."
readme = "Library.md"
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/shun4midx/FQ-HyperLogLog-Autocorrect"
Issues = "https://github.com/shun4midx/FQ-HyperLogLog-Autocorrect/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fq_hll"]

[tool.hatch.build]
include = [
    "src/fq_hll/**",
    "LICENSE",
    "Library.md"
]
exclude = [
    "tests/**",
]