[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "DyslexicLogLog"
version = "1.2.6"
authors = [
  { name="Shun/翔海", email="shun4midx@gmail.com" },
]
description = "A Frequency-Quantized HyperLogLog Autocorrection algorithm that also is dyslexia-friendly."
readme = "Dyslexic_Library.md"
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  "bitarray>=3.5.1"
]

[project.urls]
Homepage = "https://github.com/shun4midx/FQ-HyperLogLog-Autocorrect"
Issues = "https://github.com/shun4midx/FQ-HyperLogLog-Autocorrect/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dyslexicloglog"]

[tool.hatch.build]
include = [
    "src/dyslexicloglog/**",
    "LICENSE",
    "Dyslexic_Library.md"
]
exclude = [
    "tests/**",
]